[gd_scene load_steps=6 format=3 uid="uid://db8h60st2bodm"]

[ext_resource type="Script" path="res://scripts/moving_enemies.gd" id="1_mspi1"]
[ext_resource type="PackedScene" uid="uid://byfgb70lkfn00" path="res://scenes/yellow_death_particles.tscn" id="2_jwnut"]
[ext_resource type="PackedScene" uid="uid://ds0bvbqur7nob" path="res://scenes/enemy_death_sfx.tscn" id="4_3yfv7"]
[ext_resource type="Texture2D" uid="uid://wbu82lwqbqj4" path="res://assets/yellow-spaceship.png" id="5_sc524"]
[ext_resource type="FontFile" uid="uid://ct7nicg7asvhg" path="res://assets/MaldiniBold.ttf" id="6_l45iu"]

[node name="YellowEnemy" type="Area2D" groups=["Enemies", "MovingEnemies"]]
collision_layer = 513
script = ExtResource("1_mspi1")
death_particles = ExtResource("2_jwnut")
death_sfx = ExtResource("4_3yfv7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0.400002, -31.3)
polygon = PackedVector2Array(-22, 124, 20, 124, 25, 85, 80, 85, 80, 37, 25, -65, -29, -65, -78, 37, -78, 84, -31, 85)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.735198, -20.3)
scale = Vector2(0.866704, 1.21333)
texture = ExtResource("5_sc524")

[node name="HpDisplay" type="Label" parent="."]
z_index = 3
offset_left = -68.0
offset_top = 56.0
offset_right = -23.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6_l45iu")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="RayCastLEFT" type="RayCast2D" parent="."]
position = Vector2(0.335194, 0)
scale = Vector2(100, 100)
target_position = Vector2(-1.2, 0)
collision_mask = 512
collide_with_areas = true

[node name="RayCastRIGHT" type="RayCast2D" parent="."]
position = Vector2(0.335194, 0)
scale = Vector2(100, 100)
target_position = Vector2(1.2, 0)
collision_mask = 512
collide_with_areas = true

[node name="MoveDelay" type="Timer" parent="."]

[node name="Head" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 87)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="MoveDelay" to="." method="_on_move_delay_timeout"]
